@@ -12,6 +12,13 @@ What's new in Python 3.0b3?
 Core and Builtins
 -----------------
 
+- Issue #2394: implement more of the memoryview API, with the caveat that
+  only one-dimensional contiguous buffers are supported and exercised right
+  now. Slicing, slice assignment and comparison (equality and inequality)
+  have been added. Also, the tolist() method has been implemented, but only
+  for byte buffers. Endly, the API has been updated to return bytes objects
+  wherever it used to return bytearrays.
+
 - Issue #3560: clean up the new C PyMemoryView API so that naming is
   internally consistent; add macros PyMemoryView_GET_BASE() and
   PyMemoryView_GET_BUFFER() to access useful properties of a memory views
